# multi_strategy_walking

./: CMakeLists.txt  CogiMon_Running_Procedure_jiatao_cogimon.txt  README.md  XBotCore_log__2019_12_02__09_12_54.mat  XBotCore_log__2019_12_02__09_13_49.mat  XBotCore_log__2019_12_02__09_16_21.mat  XBotCore_log__2019_12_02__09_17_38.mat  XBotCore_log__2019_12_02__09_18_27.mat  XBotCore_log__2019_12_02__09_24_30.mat  XBotCore_log__2019_12_02__09_27_36.mat  XBotCore_log__2019_12_02__09_32_43.mat  XBotCore_log__2019_12_02__09_35_03.mat  XBotCore_log__2019_12_04__08_31_43.mat  multi_strategy_walking.kdev4  package.xml
.kdev4/: multi_strategy_walking.kdev4
configs/: cogimon_ding.yaml  cogimon_jt.yaml
configs/ADVR_shared/: cogimon_simple_example.yaml
configs/ADVR_shared/configs/: cogimon.yaml
configs/ADVR_shared/joint_map/: cogimon_joint_map.yaml
configs/ADVR_shared/srdf/: cogimon.srdf
configs/ADVR_shared/urdf/: cogimon.urdf
configs/CogimonConfig/: CMakeLists.txt  README.md  cogimon_basic.yaml  cogimon_demo.yaml  cogimon_idle.yaml  cogimon_impedance.yaml  cogimon_jt.yaml  cogimon_maintenance.yaml  cogimon_simple_impedance_ball_hands.yaml
configs/CogimonConfig/configs/: cogimon.yaml  cogimon_chengxu.yaml  cogimon_francesco.yaml  cogimon_francescox.yaml  cogimon_impedance.yaml
configs/CogimonConfig/srdf/: cogimon.srdf
configs/CogimonConfig/urdf/: cogimon.urdf
include/: chengxu_walking_rt_plugin_oldversion.txt  multi_strategy_walking_rt_plugin.h
src/: chengxu_walking_rt_plugin_old.tex  multi_strategy_walking_rt_plugin.cpp
src/walking/Filters/: FilterClass.cpp  KalmanFilterClass.cpp  KalmanFilterClass.h  MeanFilterClass.cpp  MeanFilterClass.h
src/walking/IK/: IKClass.cpp  IKClass.h  IKClass_OpenSoT.cpp  IKClass_OpenSoT.h
src/walking/KMP/: kmp.cpp
src/walking/MPC/: MPCClass.cpp  MPCClass.h  MPCClass_mpc.cpp  MPCClass_mpc.h
src/walking/QP/: QPBaseClass.cpp  QPBaseClass.h
src/walking/RTControl/: MpcRTControlClass.cpp  MpcRTControlClass.h  MpcRTControlClass_mpc.cpp  MpcRTControlClass_mpc.h  XBotRTControlClass.cpp  XBotRTControlClass.h
src/walking/RobotModel/: RobotModelClass.cpp  RobotModelClass.h
src/walking/RobotPara/: RobotParaClass.cpp  RobotParaClass.h  bigman_para.yaml  cogimon_lowerbody_para.yaml  cogimon_para.yaml  coman_para.yaml  robot_para.yaml  walkman_para.yaml
src/walking/RobotPara/opensot_cfg/: coman_jt.yaml
src/walking/RobotPara/opensot_cfg/coman/configs/: config_coman_floating_base.yaml
src/walking/RobotPara/urdf/: cogimon_floating_base.urdf  cogimon_lowerbody_floating_base.urdf  coman_float_base.urdf  walkman_floating_base.urdf
src/walking/Stabilizer/: StabilizerClass.cpp  StabilizerClass.h
src/walking/WBS/: RobotStateClass.cpp  RobotStateClass.h  WholeBodySensingClass.cpp  WholeBodySensingClass.h
src/walking/utils/: ChartClass.h  Eigen_utils.hpp  Func_utils.h  IOClass.h  Logger.h  ctrl_utils.h  rt_vector.h  utils.h
src/walking/utils/mrdplot/: mrdplot.cpp  mrdplot.h
src/walking/xddp_console/: CMakeLists.txt  NMPC_CoM feedback.txt  NMPC_optimal_trajectory.txt  NMPC_optimal_trajectory_interpo.txt  NMPC_runtime.txt  xddp_console  xddp_thread.cpp
