<?xml version="1.0"?>
<package>
  <name>multi_strategy_walking</name>
  <version>1.0.0</version>
  <description>This package containts the material for the IROS2018 tutorial.</description>
  <maintainer email="luca.murature@iit.it">advr</maintainer>
  <license>Creative Commons BY-NC-ND 3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
